# styleguide-config

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
styles/: commitizen.toml  coveragepy.toml  darglint.toml  dockerignore.toml  editorconfig.toml  files.toml  flake8.toml  gitattributes.toml  gitignore.toml  isort.toml  mypy.toml  nitpick-style.toml  nitpick.toml  nitpick_style.toml  poetry_dev_dependencies.toml  pydocstyle.toml  pytest.toml  python310.toml  python311.toml
styles/poetry/: poetry.toml  poetry_app_dependencies.toml  poetry_build_dependencies.toml  poetry_dev_dependencies.toml  poetry_lint_test_dependencies.toml  poetry_load_test_dependencies.toml  poetry_main_dependencies.toml  poetry_type_test_dependencies.toml  poetry_unit_test_dependencies.toml
