[tool.poetry]
name = "styleguide-config"
version = "0.1.0"
description = ""
authors = ["Viacheslav Kolupaev <v.s.kolupaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nitpick = "^0.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
