##########################################################################################
#  Copyright 2022 Viacheslav Kolupaev; author's website address:
#
#   https://vkolupaev.com/?utm_source=c&utm_medium=link&utm_campaign=styleguide_config
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
# file except in compliance with the License. You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under
# the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the specific language governing
# permissions and limitations under the License.
##########################################################################################

##########################################################################################
# Unified Python project settings file.
#
# First introduced in PEP 518 and later expanded in PEP 517, PEP 621 and PEP 660.
# This file contains build system requirements and information, which are used by pip
# to build the package.
##########################################################################################

[tool.poetry]
name = "styleguide-config"
version = "0.1.0"
description = ""
authors = ["Viacheslav Kolupaev <v.s.kolupaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nitpick = "^0.32.0"
[tool.poetry.dependencies.pylint]
version = "*"
optional = true

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
lint = ["pylint"]

[tool.black]
line-length = 120
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
# Generated by the 'nitpick init' command
# More info at https://nitpick.rtfd.io/en/latest/configuration.html
style = ['./styles/nitpick_style.toml']
